CN-11: Update to add mining sector; remove spaces from wassi values attribute names on export; internalize MultiPoint GeoJSON schema to avoid external dependency

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
 include carma_schema/data/schema/CARMA-schema-20210505.json
 include carma_schema/data/schema/CARMA-schema-20210805.json
+include carma_schema/data/schema/CARMA-schema-20210908.json
